feat(doc|makefile|link): Update Config files
Summary:
1. 更新configs、makefile文件
2. 增加ch32v203_mini原理图
3. 增加Link文件

Signed-off-by wangjingfan1996@163.com <wangjingfan1996@163.com>

Test Plan: none

Reviewers: none

--- a/configs/ch32v203_mini_defconfig
+++ b/configs/ch32v203_mini_defconfig
@@ -9,5 +9,10 @@
 CONFIG_CROSS_COMPILE="riscv-none-embed"
 CONFIG_CFLAGS=""
 CONFIG_LDFLAGS=""
-CONFIG_LINK_FILE="ch32v203_base.ld"
+CONFIG_LINK_FILE="ch32v20x_D6.ld"
 CONFIG_IMG_NAME="ch32v203_mini"
+
+#
+# Arch
+#
+CONFIG_V20X_D6=y
