--- a/ld/Makefile
+++ b/ld/Makefile
@@ -5,4 +5,4 @@
 # @date        2022-12-10
 # @version     v0.0.1
 
-extra-${CONFIG_QINGKE_V3} += ld/$(LINK_SCRIPT).S
+extra-${CONFIG_V20X_D6} += ld/$(LINK_SCRIPT).S
