feat(first ver): Project demo
Summary:

Signed-off-by jingfan.wang <wangjingfan726@gmail.com>

Test Plan: none

Reviewers: jingfan.wang

--- a/Kconfig
+++ b/Kconfig
@@ -33,3 +33,9 @@ menu "Compile Information"
                         Specifies the output image name
 
 endmenu	# Compile Info
+
+# core Info
+source "core/Kconfig"
+
+# peripheral Info
+source "peri/Kconfig"
